DEPRECATED/Kubernetes/K3S/ArgoCD/Manifest/argocd.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.options: default
    gethomepage.dev/href: "https://argocd.k3s.wiserisk.be"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: ArgoCD
    gethomepage.dev/group: K3S
    gethomepage.dev/icon: argocd.svg
    gethomepage.dev/app: argocd-server
    gethomepage.dev/name: Argo CD
spec:
  rules:
    - host: argocd.k3s.wiserisk.be
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.k3s.wiserisk.be
